feat: initial commit

--- a/.github/workflows/update_assistant_files.yml
+++ b/.github/workflows/update_assistant_files.yml
@@ -1,11 +1,12 @@
-name: Load Files into Assistant
+name: Update Assistant Files
 
 on:
-  workflow_dispatch:
-  workflow_call:
+  push:
+    branches:
+      - main
 
 jobs:
-  generate-and-load:
+  update-assistant-files:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,13 +23,14 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Generate Repo Structure
-      run: |
-        python tools/generate_repo_structure.py . > repo_structure.txt
-
-    - name: Clean current assistant and load files
+    - name: Clean Vector Store
       env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
-        python tools/clean_assistant_files.py
-        python tools/load_files_assistant.py .
+        python tools/clean_vector_store.py
+
+    - name: Update Vector Store
+      env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      run: |
+        python tools/update_vector_store.py .
