fix(workflow): add permissions for contents and issues in GitHub Actions workflow

--- a/.github/workflows/run_assistant_on_issue.yaml
+++ b/.github/workflows/run_assistant_on_issue.yaml
@@ -8,6 +8,10 @@ on:
         required: true
         type: number
 
+permissions:
+  contents: write
+  issues: write
+
 jobs:
   run-assistant:
     runs-on: ubuntu-latest
