--- a/.github/workflows/run_assistant_on_issue.yaml
+++ b/.github/workflows/run_assistant_on_issue.yaml
@@ -50,13 +50,13 @@ jobs:
           ISSUE_TITLE="${{ fromJson(steps.get_issue.outputs.data).title }}"
           ISSUE_BODY="${{ fromJson(steps.get_issue.outputs.data).body }}"
           PROMPT="Propose a step-by-step solution for the following issue and proceed:\n\nIssue: ${ISSUE_TITLE}\nDescription: ${ISSUE_BODY}"
-          python tools/solve_step_by_step.py "${PROMPT}" > issue_solver_steps
+          python tools/solve_step_by_step.py "${PROMPT}"
 
       - name: Commit the generated file
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add issue_solver_steps
+          git add issue_solver_steps.json
           git commit -m "Add issue solver steps for #${{ github.event.inputs.issue_number }}"
           git push --set-upstream origin issue-${{ github.event.inputs.issue_number }}
 
