--- a/assistant_config.json
+++ b/assistant_config.json
@@ -1,5 +1,19 @@
 {
-    "assistant_id": "asst_AsCNCsv10ukjPK90DWBWNxUq",
+    "assistant_id": "asst_eb8VshjBYgNpOFyCImMN2zFA",
     "vector_store_id": "vs_KyL9eSXS4h7Q0T8rwJ8istXt",
-    "last_thread_id": "thread_ItQJzRPRu7WZRQU7fhQFe9Cl"
+    "slave_assistants": [
+        {
+            "assistant_id": "asst_UeiAkZ9spHYLHayGXAQy7r8S",
+            "description": "This is an assistant to generate step by step instructions"
+        },
+        {
+            "assistant_id": "asst_J5Of8UtJr9IYmJo6DBjTgCQP",
+            "description": "This assistant is specialized in open AI python API"
+        },
+        {
+            "assistant_id": "asst_AsCNCsv10ukjPK90DWBWNxUq",
+            "description": "This assistant supervise the ai_assistant repository"
+        }
+    ],
+    "last_thread_id": "thread_fAvKGo6qfo52EuLDIf0dc3Ft"
 }
