--- a/assistant_config.json
+++ b/assistant_config.json
@@ -1,6 +1,7 @@
 {
+    "repo_assistant_id": "asst_AsCNCsv10ukjPK90DWBWNxUq",
+    "repo_vector_store_id": "vs_KyL9eSXS4h7Q0T8rwJ8istXt",
     "assistant_id": "asst_eb8VshjBYgNpOFyCImMN2zFA",
-    "vector_store_id": "vs_KyL9eSXS4h7Q0T8rwJ8istXt",
     "slave_assistants": [
         {
             "assistant_id": "asst_UeiAkZ9spHYLHayGXAQy7r8S",
