--- a/.github/workflows/update_assistant_instructions.yml
+++ b/.github/workflows/update_assistant_instructions.yml
@@ -15,6 +15,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
       - name: Update Assistant Instructions
         run: |
           echo 'Updating assistant instructions...'
