--- a/.github/workflows/run_assistant_on_issue.yaml
+++ b/.github/workflows/run_assistant_on_issue.yaml
@@ -49,7 +49,8 @@ jobs:
         run: |
           ISSUE_TITLE="${{ fromJson(steps.get_issue.outputs.data).title }}"
           ISSUE_BODY="${{ fromJson(steps.get_issue.outputs.data).body }}"
-          PROMPT="Propose a step-by-step solution for the following issue:\n\nIssue: ${ISSUE_TITLE}\nDescription: ${ISSUE_BODY}"
+          REPO_NAME="${{ github.repository }}"
+          PROMPT="For the ${REPO_NAME} repository, propose a step-by-step solution for the following issue:\n\nIssue: ${ISSUE_TITLE}\nDescription: ${ISSUE_BODY}"
           python tools/run_assistant.py --no-interaction "${PROMPT}"
 
       - name: Commit the generated file
