--- a/assistant_config.json
+++ b/assistant_config.json
@@ -1,5 +1,4 @@
 {
-    "repo_assistant_id": "asst_AsCNCsv10ukjPK90DWBWNxUq",
     "repo_vector_store_id": "vs_KyL9eSXS4h7Q0T8rwJ8istXt",
     "assistant_id": "asst_eb8VshjBYgNpOFyCImMN2zFA",
     "slave_assistants": [
@@ -9,7 +8,7 @@
         },
         {
             "assistant_id": "asst_AsCNCsv10ukjPK90DWBWNxUq",
-            "description": "This assistant supervise the ai_assistant repository"
+            "description": "This assistant has knowledge of the ai_assistant repository content"
         }
     ]
 }
