--- a/.github/workflows/run_assistant_on_issue.yaml
+++ b/.github/workflows/run_assistant_on_issue.yaml
@@ -50,15 +50,15 @@ jobs:
           ISSUE_TITLE="${{ fromJson(steps.get_issue.outputs.data).title }}"
           ISSUE_BODY="${{ fromJson(steps.get_issue.outputs.data).body }}"
           REPO_NAME="${{ github.repository }}"
-          PROMPT="For the ${REPO_NAME} repository, propose a step-by-step solution for the following issue:\n\nIssue: ${ISSUE_TITLE}\nDescription: ${ISSUE_BODY}"
+          PROMPT="Try to solve as much as you can the following issue:\n\nIssue: ${ISSUE_TITLE}\nDescription: ${ISSUE_BODY}"
           python tools/run_assistant.py --no-interactive "${PROMPT}"
 
-      - name: Commit the generated file
+      - name: Commit the generated files
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add issue_solver_steps.json
-          git commit -m "Add issue solver steps for #${{ github.event.inputs.issue_number }}"
+          git add .
+          git commit -m "Assistant: Proposed solutions for issue ${{ github.event.inputs.issue_number }}"
           git push --set-upstream origin issue-${{ github.event.inputs.issue_number }}
 
       - name: Comment on the issue
