--- a/assistant_config.json
+++ b/assistant_config.json
@@ -1,6 +1,5 @@
 {
     "repo_vector_store_id": "vs_KyL9eSXS4h7Q0T8rwJ8istXt",
-    "vector_store_id": "vs_CGHZX4ng8vw5lWJ0cyd56naT",
     "assistant_id": "asst_eb8VshjBYgNpOFyCImMN2zFA",
     "slave_assistants": [
         {
@@ -9,7 +8,7 @@
         },
         {
             "assistant_id": "asst_AsCNCsv10ukjPK90DWBWNxUq",
-            "description": "This assistant has knowledge of the ai_assistant repository content"
+            "description": "An assistant whose database contain all files of the ai_assistant repository"
         }
     ]
 }
