fix: adjust prompt in GitHub Actions workflow and update assistant configuration
- The GitHub Actions workflow file '.github/workflows/run_assistant_on_issue.yaml' was updated to refine the assistant prompt by preventing it from asking for user input.
- The 'tools/configure_assistant.py' script had an entry removed for the update assistant function to refine tool usage.

--- a/.github/workflows/run_assistant_on_issue.yaml
+++ b/.github/workflows/run_assistant_on_issue.yaml
@@ -50,7 +50,7 @@ jobs:
           ISSUE_TITLE="${{ fromJson(steps.get_issue.outputs.data).title }}"
           ISSUE_BODY="${{ fromJson(steps.get_issue.outputs.data).body }}"
           REPO_NAME="${{ github.repository }}"
-          PROMPT="Try to solve as much as you can the following issue. You should proceed with file implementation in the current repository to obtain the desired result.\n\nIssue: ${ISSUE_TITLE}\nDescription: ${ISSUE_BODY}"
+          PROMPT="Try to solve as much as you can the following issue. You should not ask the user for prompt.\n\nIssue: ${ISSUE_TITLE}\nDescription: ${ISSUE_BODY}"
           python tools/run_assistant.py --no-interactive "${PROMPT}"
 
       - name: Commit the generated files
