fix(workflow): secure push by setting remote url with AI_TOKEN for GitHub actions
- Updated workflow file run_assistant_on_issue.yaml to include a security enhancement by setting the remote URL for pushing with the AI_TOKEN. This change ensures that the push command within the GitHub action uses a more secure method for authentication, addressing potential issues related to authentication security.

--- a/.github/workflows/run_assistant_on_issue.yaml
+++ b/.github/workflows/run_assistant_on_issue.yaml
@@ -59,6 +59,8 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "Assistant: Proposed solutions for issue ${{ github.event.inputs.issue_number }}"
+          # Push using AI_TOKEN
+          git remote set-url origin "https://${{ secrets.AI_TOKEN }}@github.com/${{ github.repository }}"
           git push --set-upstream origin issue-${{ github.event.inputs.issue_number }}
 
       - name: Comment on the issue
