--- a/.github/workflows/run_assistant_on_issue.yaml
+++ b/.github/workflows/run_assistant_on_issue.yaml
@@ -60,7 +60,7 @@ jobs:
           git add .
           git commit -m "Assistant: Proposed solutions for issue ${{ github.event.inputs.issue_number }}"
           # Push using AI_TOKEN
-          git remote set-url origin "https://${{ secrets.AI_TOKEN }}@github.com/${{ github.repository }}"
+          git remote set-url origin "https://${{ secrets.AI_TOKEN }}@github.com/${{ github.repository }}.git"
           git push --set-upstream origin issue-${{ github.event.inputs.issue_number }}
 
       - name: Comment on the issue
