--- a/.github/workflows/run_assistant_on_issue.yaml
+++ b/.github/workflows/run_assistant_on_issue.yaml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.AI_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -54,14 +56,11 @@ jobs:
           python tools/run_assistant.py --no-interactive "${PROMPT}"
 
       - name: Commit the generated files
-        github_token: ${{ secrets.AI_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "Assistant: Proposed solutions for issue ${{ github.event.inputs.issue_number }}"
-          # Push using AI_TOKEN
-          git remote set-url origin "https://${{ secrets.AI_TOKEN }}@github.com/${{ github.repository }}.git"
           git push --set-upstream origin issue-${{ github.event.inputs.issue_number }}
 
       - name: Comment on the issue
