--- a/assistant_config.json
+++ b/assistant_config.json
@@ -1,5 +1,6 @@
 {
     "repo_vector_store_id": "vs_KyL9eSXS4h7Q0T8rwJ8istXt",
+    "repo_assistant_id": "asst_AsCNCsv10ukjPK90DWBWNxUq",
     "assistant_id": "asst_eb8VshjBYgNpOFyCImMN2zFA",
     "slave_assistants": [
         {
