Here's a suitable commit message for squashing the `issue-8` branch:
```
Refactor and enhance scripts:
- Improved `squash_and_pr.sh` for streamlined squashing and PR creation; transitioned from interactive rebase to non-interactive reset and commit, with an explicit empty body for pull requests.
- Updated file permissions for `squash_and_pr.sh`.
- Added a new automation script for squash and pull request.
- Introduced new file loading functionality and workflow improvements.
- Provided solutions for issue 8.
```

This commit message concisely summarizes the key changes and enhancements made in the branch.

--- a/.github/workflows/run_assistant_on_issue.yaml
+++ b/.github/workflows/run_assistant_on_issue.yaml
@@ -68,6 +68,7 @@ jobs:
         with:
           route: POST /repos/${{ github.repository }}/issues/${{ github.event.inputs.issue_number }}/comments
           body: |
-            The assistant has created a branch with proposed solutions. Please review the branch `issue-${{ github.event.inputs.issue_number }}` for details.
+             The assistant has created a branch with proposed solutions. Please review the branch `issue-${{ github.event.inputs.issue_number }}` for details. Here is the last assistant output:
+             $(cat /tmp/assistant_output.txt)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
