--- a/assistant_config.json
+++ b/assistant_config.json
@@ -1,5 +1,6 @@
 {
     "assistant_id": "asst_eb8VshjBYgNpOFyCImMN2zFA",
+    "assistant_id": "asst_eb8VshjBYgNpOFyCImMN2zFA",
     "slave_assistants": [
         {
             "assistant_id": "asst_J5Of8UtJr9IYmJo6DBjTgCQP",
