fix(workflow): add OPENAI_API_KEY to branch deletion job
Added OPENAI_API_KEY environment variable to the 'Delete Assistant and Vector Store' step in the handle_branch_deletion.yml workflow to ensure proper authentication when accessing OpenAI services.

--- a/.github/workflows/handle_branch_deletion.yml
+++ b/.github/workflows/handle_branch_deletion.yml
@@ -29,3 +29,5 @@ jobs:
 
     - name: Delete Assistant and Vector Store
       run: python tools/delete_assistant.py ${{ steps.extractbranch.outputs.branch }}
+      env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
