chore(workflow): add 'write' permission for contents in 'create_update_repo_assistant.yml'\n\nAdded permissions to allow writing contents in the GitHub workflow for creating or updating the repository assistant. This change ensures that the workflow can perform necessary operations on repository contents.

--- a/.github/workflows/create_update_repo_assistant.yml
+++ b/.github/workflows/create_update_repo_assistant.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - '**'
 
+permissions:
+  contents: write
+
 jobs:
   create_update_repo_assistant:
     runs-on: ubuntu-latest
