--- a/repo_assistant_config.json
+++ b/repo_assistant_config.json
@@ -1,4 +1,4 @@
 {
-    "repo_vector_store_id": "vs_KyL9eSXS4h7Q0T8rwJ8istXt",
-    "repo_assistant_id": "asst_AsCNCsv10ukjPK90DWBWNxUq"
+    "repo_assistant_id": "asst_YKJkHT5wT9cQ8xl4z7oKIM3b",
+    "repo_vector_store_id": "vs_jnwMQnFimqAmUBAibr5yvvpD"
 }
