fix(workflows): ensure correct branch reference for deletion\n\nThe 'handle_branch_deletion.yml' workflow now ensures that branch deletions triggers are correctly configured with the appropriate GitHub event utilization. This update resolves potential mismatches in branch references.\n\nfix(tools): correct endpoint usage for delete operations\n\nIn 'delete_assistant.py', updated API endpoint usage, ensuring the current paths for file and assistant deletions are utilized. This patch fortifies deletion operations aligned with the client library's latest standards.

--- a/.github/workflows/handle_branch_deletion.yml
+++ b/.github/workflows/handle_branch_deletion.yml
@@ -1,17 +1,20 @@
 name: Handle Branch Deletion
 
 on:
-  delete:
+  push:
     branches:
       - '**'
 
 jobs:
   handleDeletion:
+    if: github.event.deleted == true
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+    with:
+    ref: ${{ github.event.before }}
 
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -23,11 +26,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Extract branch name
-      id: extractbranch
-      run: echo "::set-output name=branch::${GITHUB_REF##*/}"
-
     - name: Delete Assistant and Vector Store
-      run: python tools/delete_assistant.py ${{ steps.extractbranch.outputs.branch }}
+      run: python tools/delete_assistant.py
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
