--- a/.github/workflows/handle_branch_deletion.yml
+++ b/.github/workflows/handle_branch_deletion.yml
@@ -28,6 +28,8 @@ jobs:
     - name: Get Assistant and Vector Store IDs
       run: |
         python3 tools/fetch_ids_from_names.py
+      env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
     - name: Delete Assistant and Vector Store
       run: python tools/delete_assistant.py $repo_assistant_id $repo_vector_store_id
