feat(tools): enhance argument handling in fetch_ids_from_names.py
- Added argument parsing using  to  to accept  and  as command-line arguments, improving flexibility and reuse in scripts.
- Updated  to reflect changes in the script, replacing environment variable usage with command-line arguments.

chore(workflows): update branch deletion workflow

- Modified handle_branch_deletion.yml to call  with the  and  arguments directly from the GitHub environment context.
- Simplified the delete assistant command removing unnecessary arguments.

chore(repo): add ids_output.txt for assistant and vector store IDs

- Added  to track the current assistant and vector store IDs for workflow integration.

--- a/.github/workflows/handle_branch_deletion.yml
+++ b/.github/workflows/handle_branch_deletion.yml
@@ -27,11 +27,9 @@ jobs:
 
     - name: Get Assistant and Vector Store IDs
       run: |
-        python3 tools/fetch_ids_from_names.py
-      env:
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        python3 tools/fetch_ids_from_names.py --repository "${{ github.repository }}" --branch "${{ github.ref }}"
 
     - name: Delete Assistant and Vector Store
-      run: python tools/delete_assistant.py $repo_assistant_id $repo_vector_store_id
+      run: python tools/delete_assistant.py
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
