--- a/.github/workflows/handle_branch_deletion.yml
+++ b/.github/workflows/handle_branch_deletion.yml
@@ -27,7 +27,10 @@ jobs:
 
     - name: Get Assistant and Vector Store IDs
       run: |
-        python3 tools/fetch_ids_from_names.py --repository "${{ github.repository }}" --branch "${{ github.ref }}"
+        run: |
+          REPO_NAME=${{ github.repository }}
+          BRANCH=${{ github.ref_name }}
+          python3 tools/fetch_ids_from_names.py --repository "$REPO_NAME" --branch "$BRANCH"
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
