--- a/assistant_config.json
+++ b/assistant_config.json
@@ -7,7 +7,7 @@
         },
         {
             "assistant_id": "asst_YKJkHT5wT9cQ8xl4z7oKIM3b",
-            "description": "An assistant whose database contain all files of the ai_assistant repository"
+            "description": "An assistant whose database contain all files of the current repository"
         }
     ]
 }
