fix(workflow): fix PROMPT multiline syntax in run_assistant_on_issue.yaml
- Change PROMPT definition to use a multiline syntax (heredoc) to improve readability and maintainability
- Ensure that the syntax is correctly passed to the run_assistant.py script

Resolves issue with PROMPT handling in the GitHub Actions workflow.

--- a/.github/workflows/run_assistant_on_issue.yaml
+++ b/.github/workflows/run_assistant_on_issue.yaml
@@ -52,8 +52,14 @@ jobs:
           ISSUE_TITLE="${{ fromJson(steps.get_issue.outputs.data).title }}"
           ISSUE_BODY="${{ fromJson(steps.get_issue.outputs.data).body }}"
           REPO_NAME="${{ github.repository }}"
-          PROMPT="Try to solve as much as you can the following issue. You should not ask the user for prompt.\n\nIssue: ${ISSUE_TITLE}\nDescription: ${ISSUE_BODY}"
-          python tools/run_assistant.py --no-interactive "${PROMPT}"
+          PROMPT=$(cat <<EOF
+                  Try to solve as much as you can the following issue. You should not ask the user for prompt.
+                  
+                  Issue: ${ISSUE_TITLE}
+                  Description: ${ISSUE_BODY}
+                  EOF
+                  )
+          python tools/run_assistant.py - "${PROMPT}"
 
       - name: Commit the generated files
         run: |
