--- a/.github/workflows/run_assistant_on_issue.yaml
+++ b/.github/workflows/run_assistant_on_issue.yaml
@@ -1,6 +1,4 @@
 on:
-  issue_comment:
-    types: [created]  # Trigger on new comments
   workflow_dispatch:
     inputs:
       issue_number:
@@ -61,7 +59,8 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "Assistant: Proposed solutions for issue ${{ github.event.inputs.issue_number }}"
+          # Commit the changes, handling the case where there are no changes
+          git commit -m "Assistant: Proposed solutions for issue ${{ github.event.inputs.issue_number }}" || echo "No changes to commit"
           git push --set-upstream origin issue-${{ github.event.inputs.issue_number }}
 
       - name: Read assistant output
