--- a/.github/workflows/run_assistant_on_issue.yaml
+++ b/.github/workflows/run_assistant_on_issue.yaml
@@ -56,6 +56,7 @@ jobs:
 
       - name: Commit the generated files
         run: |
+          cp tmp/assistant_output.txt assistant_issue_comment.txt
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
@@ -63,16 +64,11 @@ jobs:
           git commit -m "Assistant: Proposed solutions for issue ${{ github.event.inputs.issue_number }}" || echo "No changes to commit"
           git push --set-upstream origin issue-${{ github.event.inputs.issue_number }}
 
-      - name: Read assistant output
-        id: read_output
-        run: echo "output=$(cat /tmp/assistant_output.txt)" >> $GITHUB_ENV
-
       - name: Comment on the issue
         uses: octokit/request-action@v2.x
         with:
           route: POST /repos/${{ github.repository }}/issues/${{ github.event.inputs.issue_number }}/comments
           body: |
-            The assistant has created a branch with proposed solutions. Please review the branch `issue-${{ github.event.inputs.issue_number }}` for details. Here is the last assistant output:
-            ${{ env.output }}
+            The assistant has created a branch with proposed solutions. Please review the branch `issue-${{ github.event.inputs.issue_number }}` for details.
         env:
           GITHUB_TOKEN: ${{ secrets.AI_TOKEN }}
