--- a/.github/workflows/clean_and_merge.yaml
+++ b/.github/workflows/clean_and_merge.yaml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Run Cleaning Script
         run: |
-          git checkout main repo_assistant_config.json
+          git checkout main -- repo_assistant_config.json
           rm thread_id || echo "No thread_id file to remove"
           rm assistant_issue_comment.txt || echo "No assistant_issue_comment file to remove"
 
