fix(workflow): ensure latest main is used in clean and merge
Add  command before checking out specific files in the clean and merge workflow.
This ensures the latest version of these files is used, aligning with the latest updates on the main branch.

--- a/.github/workflows/clean_and_merge.yaml
+++ b/.github/workflows/clean_and_merge.yaml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Run Cleaning Script
         run: |
+          git fetch origin main
           git checkout main -- repo_assistant_config.json
           rm thread_id || echo "No thread_id file to remove"
           rm assistant_issue_comment.txt || echo "No assistant_issue_comment file to remove"
