--- a/.github/workflows/run_assistant_on_issue.yaml
+++ b/.github/workflows/run_assistant_on_issue.yaml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Commit the generated files
         run: |
-          cp tmp/assistant_output.txt assistant_issue_comment.txt
+          cp /tmp/assistant_output.txt assistant_issue_comment.txt
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
