refactor: improve assistant configuration management
### Changes Overview
- **assistant_config.json**: Structured the JSON with `main` and `commit` assistants, each having its own configurations and descriptions.
- **repo_assistant_config.json**: Updated IDs for both `repo_assistant` and `repo_vector_store`.
- **scripts/generate_commit.sh**: Adjusted the script to utilize the new `commit` assistant, improved parsing of commit messages, and added extraction logic for commit subjects and bodies from a temporary file.
- **tools/assistant_gpt.py**: Modified `init_from_file` to take an additional parameter `assistant_name` to load specific assistant configurations. Also, ensured `slave_assistants` array exists even if empty.
- **tools/run_assistant.py**: Added command-line argument `--assistant` to select which assistant configuration to load, defaulting to `main`.

### Purpose
These changes aim to provide better modularization in handling multiple assistants within the AI assistant framework, optimizing how tasks like commit message generation are handled via specifically configured sub-assistants.

--- a/assistant_config.json
+++ b/assistant_config.json
@@ -1,9 +1,17 @@
 {
-    "assistant_id": "asst_eb8VshjBYgNpOFyCImMN2zFA",
-    "slave_assistants": [
-        {
-            "assistant_id": "asst_J5Of8UtJr9IYmJo6DBjTgCQP",
-            "description": "This assistant is specialized in open AI python API"
+    "main" : {
+            "assistant_id": "asst_eb8VshjBYgNpOFyCImMN2zFA",
+            "description": "This assistant is designed to help with general queries",
+            "slave_assistants": [
+                {
+                    "assistant_id": "asst_J5Of8UtJr9IYmJo6DBjTgCQP",
+                    "description": "This assistant is specialized in open AI python API"
+                }
+            ]
+        },
+    "commit": {
+            "name": "commit",
+            "assistant_id": "asst_MoHjFNWCAIKokAVOgEbPJrpM",
+            "description": "This assistant is specialized in generating commit messages"
         }
-    ]
 }
